--- a/css/zerogrid.css
+++ b/css/zerogrid.css
@@ -419,7 +419,6 @@ height: 320px !important;
 .zerogrid .text-agile {
 	font-size: 38px !important;
 	line-height: 45px !important;
-	margin-top: 60px !important;
 	margin-left: 30px!important;
 }
 
@@ -604,14 +603,12 @@ body {
 }
 .zerogrid .text-agile {
 	line-height: 65px;
-	color: #f2f2f2;
+	color:#fff ;
 	font-family:Neou;
 	font-size: 62px;
 	margin-left: 50px;
 	margin-right: 35px;
-	margin-top: 80px;
-	border-bottom: 4px solid #8AB839;
-
+	margin-top: 90px;
 }
 .zerogrid .text-success {
 	line-height: 45px;
@@ -636,7 +633,7 @@ body {
 .zerogrid .ourvision-text {
 	line-height: 40px;
 	text-align: center;
-	font-family:texgyre;
+	font-family:source;
 	color: #fff;
 	font-size: 42px;
 	padding-left: 0px;
